<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_HMIDigOutputs" Id="{c69ff436-613f-4474-85d8-b850c19c943a}">
    <Declaration><![CDATA[TYPE ST_HMIDigOutputs :
STRUCT
	bHMIResetButton	: BOOL; //Reset button light sent to HMI
	bHMIStartButton	: BOOL; //Start button light sent to HMI
	bHMIEStopSide	: BOOL; //Emergency stop button sent to HMI
	bHMIEStopFront	: BOOL; //Emergency stop button sent to HMI
	
	//Alarm Lamp HMI Indicators
	bAlarmLampRed	:	BOOL := FALSE;
	bAlarmLampAmbar	:	BOOL := FALSE;
	bAlarmLampGreen	:	BOOL := FALSE;
	
	
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>