<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <GVL Name="GVL_HMI" Id="{0409f918-eea3-4325-9608-40b83ff788af}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	//Controls I/O
	bHomeLampBlueState 	: BOOL;
	
	//Indicators
	bHMIAlarmLampRed	 : BOOL;
	bHMIAlarmLampAmbar	 : BOOL;
	bHMIAlarmLampGreen	 : BOOL;
	
	//Cycle Control
	bBtStartCycle		 : BOOL := FALSE; //Button Start Cycle from HMI
	bBtStopCycle		 : BOOL := FALSE; //Button Start Cycle from HMI
	
	HMIDigInputs		 : ST_HMIDigInputs;  //Digital Inputs data from HMI
	HMIDigOutputs		 : ST_HMIDigOutputs; //Digital Outputs data for HMI
	
	HMIParameters		 : ST_HMIParameters; //Parameters from HMI inputs
	
	HMIAnimation		 : ST_HMIAnimation; //Variables needed to animate the HMI
	
	eMachineMode		 : E_MachineMode := E_MachineMode.STOPPED; //Machine mode selection from HMI
	
	HMIStartAnimation	 : BOOL := TRUE;
	
	bIncoherenceDetected : BOOL := FALSE; //Incoherence Monitoring that could block master controll to enter in autoCycle
	
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>